Upgrade Jeff Law's entry.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -88,7 +88,9 @@ particular order.
   maintaining binary releases for Windows hosts.
   <li> Thomas Koenig for various bugfixes.
   <li> Benjamin Kosnik for his g++ work.
-  <li> Jeff Law for random hacking.
+  <li> Jeff Law for coordinating the entire project, rolling out snapshots
+       and releases, handling merges from GCC2, and random but extensive
+       hacking.
   <li> Marc Lehmann for his guidance via the steering committee and helping
   with analysis and improvements of x86 performance.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
@@ -234,7 +236,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  February 18, 1999</i>
+<p><i>Last modified:  March 19, 1999</i>
 
 
 <hr>
@@ -246,4 +248,3 @@ reports and generally reminds us why we're doing this work in the first place.
 <!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
-
