--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -853,7 +853,13 @@ Ulrich Drepper &lt;drepper@cygnus.com&gt; should fix this for glibc
 <p>Apparently Octave 2.0.13 uses some C++ features which have been
 obsoleted and thus fails to build with egcs-1.1 and later. This <a
 href="http://www.che.wisc.edu/octave/mailing-lists/bug-octave/1998/270">patch
-to Octave</a> should fix this.
+to Octave</a> should fix this.</p>
+
+<p>Octave 2.0.13.96, a test release, has been compiled without patches by
+egcs 1.1.2.  It is available at
+<a href="ftp://ftp.che.wisc.edu/pub/octave/test-releases/">
+ftp://ftp.che.wisc.edu/pub/octave/test-releases/</a>.</p>
+
 
 
 <hr>
@@ -1111,7 +1117,7 @@ only be necessary if you are building anything obtained from CVS.
 
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  March 10, 1999</i>
+<p><i>Last modified:  March 21, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
