Note x86 double alignment work.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,6 +38,15 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 23, 1999</b></dt>
+<dd> 
+Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
+keep the stack 64bit aligned on the x86 and allocate doubles on 64bit
+boundaries.  This can significantly improve floating point performance on the
+x86.  Work will continue on aligning the stack and floating point values in
+the stack.
+</dd>
+
 <dt><b>March 15, 1999</b></dt>
 <dd>
 <a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
@@ -161,7 +170,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 10, 1999.</i>
+<i>Last modified on March 23, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
