cvs.html (cvsweb): Point to egcs source files directly, instead of top of egcs repository.  "/egcs/carton/cvsfiles" -> "/cvs/egcs". By Jason Molenda (jsm@bugshack.cygnus.com).

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -21,10 +21,10 @@ release branch(es) since they also live in the CVS repository.
 in texinfo form in the CVS sources.
 
 <ul>
-  <li><a href="/cgi-bin/cvsweb" title="/cgi-bin/cvsweb">Browse the CVS
+  <li><a href="/cgi-bin/cvsweb/egcs/">Browse the CVS
   history online</a> via your web browser.
 
-  <li><a href="http://www.cyclic.com">Visit Cyclic Software</a> to pick up a
+  <li><a href="http://www.cyclic.com/">Visit Cyclic Software</a> to pick up a
   recent copy of CVS.  Links to books on the subject can also be found
   there.
 
@@ -43,10 +43,10 @@ sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
 
-<pre>	:pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles</pre> 
+<pre>	:pserver:anoncvs@egcs.cygnus.com:/cvs/egcs</pre> 
 
 <p>Or alternately add 
-<pre>	-d :pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles</pre>
+<pre>	-d :pserver:anoncvs@egcs.cygnus.com:/cvs/egcs</pre>
 in the CVS commands below (place it immediately after <code>"cvs"</code> -- ie
 before any other CVS arguments).
 
@@ -98,7 +98,7 @@ the web pages.
 <p>Enjoy!
 
 <hr>
-<i>Last modified on February 25, 1999.</i>
+<i>Last modified on March 25, 1999.</i>
 <hr>
 
 <a href="">Return to the egcs home page</a>
