--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -37,11 +37,19 @@ file to test write access.
 <h2>Setting up your local CVS tree</h2>
 
 <p>Once you can login to the machine, it's trivial to start using ssh from
-your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
-the command
+your remote machine.  Set CVS_RSH in your environment to "ssh".  Add
+the following to your $HOME/.ssh/config file so the communications are
+compressed:
+<blockquote>
+<pre>
+Compression yes
+CompressionLevel 9
+</pre>
+
+<p>Then issue the command
 
 <blockquote><code>
-cvs -z 9 -d username@egcs.cygnus.com:/egcs/carton/cvsfiles co egcs
+cvs -d :ext:username@egcs.cygnus.com:/cvs/egcs co egcs
 </code></blockquote>
 
 where <code>username</code> is your user name at egcs.cygnus.com.
@@ -53,7 +61,7 @@ in the normal fashion, including committing changes.
 all the "Root" files in the local tree with the following contents:
 
 <blockquote><code>
-username@egcs.cygnus.com:/egcs/carton/cvsfiles
+username@egcs.cygnus.com:/cvs/egcs
 </code></blockquote>
 
 
@@ -65,7 +73,7 @@ it as a demon and set the values of the environment variables
 <code>SSH_AUTHENTICATION_SOCKET</code> and <code>SSH_AGENT_PID</code>
 in each relevant process to what <code>ssh-agent</code> prints when it
 starts.  To avoid messages about (lack of) X11 forwarding, put in your
-<samp>~/.ssh/config</samp> and entry like:
+<samp>$HOME/.ssh/config</samp> and entry like:
 <blockquote><code>
 Host egcs.cygnus.com<br>
 ForwardX11 no
@@ -78,7 +86,7 @@ ForwardX11 no
 <p>Late breaking news: the web pages and CGI scripts are now also
 editable remotely.  Check out wwwdocs instead of egcs (e.g. type
 <blockquote><code>
-cvs -z 9 -d egcs.cygnus.com:/egcs/carton/cvsfiles co wwwdocs
+cvs -d :ext:username@egcs.cygnus.com:/cvs/egcs co wwwdocs
 </code></blockquote>
 on your workstation) and make whatever changes you deem necessary.
 Web pages go under htdocs/, cgi scripts under cgi-bin/.  When you check
@@ -86,7 +94,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on February  22, 1999.</i>
+<i>Last modified on March 25, 1999.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
