"/egcs/carton/cvsfiles" -> "/cvs/egcs". By Jason Molenda  (jsm@bugshack.cygnus.com).

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -245,19 +245,19 @@ checkin process....
 <blockquote>
 <pre>
 Checking in ChangeLog;
-/egcs/carton/cvsfiles/egcs/./gcc/ChangeLog,v  &lt;--  ChangeLog
+/cvs/egcs/egcs/./gcc/ChangeLog,v  &lt;--  ChangeLog
 new revision: 1.746; previous revision: 1.745
 done
 Checking in bitmap.c;
-/egcs/carton/cvsfiles/egcs/./gcc/bitmap.c,v  &lt;--  bitmap.c
+/cvs/egcs/egcs/./gcc/bitmap.c,v  &lt;--  bitmap.c
 new revision: 1.6; previous revision: 1.5
 done
 Checking in calls.c;
-/egcs/carton/cvsfiles/egcs/./gcc/calls.c,v  &lt;--  calls.c
+/cvs/egcs/egcs/./gcc/calls.c,v  &lt;--  calls.c
 new revision: 1.12; previous revision: 1.11
 done
 Checking in genattrtab.c;
-/egcs/carton/cvsfiles/egcs/./gcc/genattrtab.c,v  &lt;--  genattrtab.c
+/cvs/egcs/egcs/./gcc/genattrtab.c,v  &lt;--  genattrtab.c
 new revision: 1.15; previous revision: 1.14
 done
 [/law/egcs/egcs/gcc] 
@@ -274,7 +274,7 @@ you should check them in with separate cvs commit commands.
 <p>And that's it!
 
 <hr>
-<i>Last modified on Sept 9, 1998.</i>
+<i>Last modified on March 25, 1999.</i>
 
 </body>
 </html>
