--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -27,6 +27,7 @@ comp.std.c++ FAQ</a>.
      <li><a href="#open-development">What is an open development model?</a>
      <li><a href="#release-fork">Releases and Forking</a>
      <li><a href="#bugreport">How to report bugs</a>
+     <li><a href="#support">How do I get a bug fixed or a feature added?</a>
   </ol> 
 
   <li><a href="#installation">Installation</a>
@@ -283,6 +284,36 @@ impossible.  So, although we prefer to have complete bug reports
 archived, if you cannot reduce the bug report below the limit, please
 make it available for ftp or http and post the URL.
 
+<hr>
+<h2><a name="support">How do I get a bug fixed or a feature added?</a></h2>
+<p>There are lots of ways to get something fixed.  The list below may be
+incomplete, but it covers many of the common cases.  These are listed
+roughly in order of increasing difficulty for the average GCC user,
+meaning someone who is not skilled in the internals of GCC, and where
+difficulty is measured in terms of the time required to fix the bug.
+No alternative is better than any other; each has it's benefits and
+disadvantages.
+
+<ul>
+<li>Hire someone to fix it for you.  There are various companies and
+    individuals providing support for GCC.  This alternative costs
+    money, but is relatively likely to get results.
+
+<li>Report the problem to egcs-bugs and hope that someone will be kind
+    enough to fix it for you.  While this is certainly possible, and
+    sometimes happens, there is no guarantee that it will.  You should
+    not expect the same response from egcs-bugs that you would see
+    from a commercial support organization since the people who read
+    egcs-bugs, if they choose to help you, will be volunteering their
+    time.  This alternative will work best if follow the directions on
+    <a href="#bugreport">submitting bugreports</a>.
+
+<li>Fix it yourself.  This alternative will probably bring results,
+    if you work hard enough, but will probably take a lot of time,
+    and, depending on the quality of your work and the perceived
+    benefits of your changes, your code may or may not ever make it
+    into an official release of EGCS.
+</ul>
 
 <hr>
 <a name="installation"></a>
