Minor tweaks to the new "Support" entry.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -301,12 +301,12 @@ disadvantages.
 
 <li>Report the problem to egcs-bugs and hope that someone will be kind
     enough to fix it for you.  While this is certainly possible, and
-    sometimes happens, there is no guarantee that it will.  You should
+    often happens, there is no guarantee that it will.  You should
     not expect the same response from egcs-bugs that you would see
     from a commercial support organization since the people who read
     egcs-bugs, if they choose to help you, will be volunteering their
-    time.  This alternative will work best if follow the directions on
-    <a href="#bugreport">submitting bugreports</a>.
+    time.  This alternative will work best if you follow the directions
+    on <a href="#bugreport">submitting bugreports</a>.
 
 <li>Fix it yourself.  This alternative will probably bring results,
     if you work hard enough, but will probably take a lot of time,
@@ -1168,7 +1168,7 @@ only be necessary if you are building anything obtained from CVS.
 
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  March 23, 1999</i>
+<p><i>Last modified:  March 29, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
