--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,6 +38,15 @@ maintain and improve quality.
 
 <dl>
 
+<dd>
+<a href="mailto:toon@moene.indiv.nluug.nl">Toon Moene</a> and
+<a href="craig@jcb-sc.com">Craig Burley</a> are organizing a Fortran BOF
+session at LinuxExpo in May.  Details will be provided on
+<a href="http://world.std.com/~burley">Craig's homepage</a> as they become
+available.
+<p>
+</dd>
+
 <dt><b>March 23, 1999</b></dt>
 <dd> 
 Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
@@ -79,26 +88,6 @@ of the compiler.
 <a href="mailto:espie@openbsd.org">Marc Espie</a> has donated support for
 OpenBSD on the Alpha, SPARC, x86, and m68k platforms.  Additional targets
 are expected in the future.
-</dd>
-
-<dt><b>January 21, 1999</b></dt>
-<dd> 
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
-750 processor.  The PPC750 is a 32bit superscalar implementation of the
-PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targetted
-at high end Macs as well as high end embedded applications.
-</dd>
-
-<dt><b>January 18, 1999</b></dt>
-<dd>
-Christian Bruel and Jeff Law donate improved 
-<a href="dse.html">local dead store elimination.</a>
-</dd>
-
-<dt><b>January 14, 1999</b></dt>
-<dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for Hypersparc
-(SS20) and Sparclite86x (embedded) processors.
 </dd>
 
 </dl>
@@ -170,7 +159,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 23, 1999.</i>
+<i>Last modified on March 29, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
