--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,26 @@ home page</a>.
 
 <dl>
 
+<dt><b>January 21, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
+750 processor.  The PPC750 is a 32bit superscalar implementation of the
+PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targetted
+at high end Macs as well as high end embedded applications.
+</dd>
+
+<dt><b>January 18, 1999</b></dt>
+<dd>
+Christian Bruel and Jeff Law donate improved
+<a href="dse.html">local dead store elimination.</a>
+</dd>
+
+<dt><b>January 14, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for Hypersparc
+(SS20) and Sparclite86x (embedded) processors.
+</dd>
+
 <dt><b>December 7, 1998</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
@@ -180,7 +200,7 @@ framework</b></a>.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 7, 1999.</i>
+<i>Last modified on March 29, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
