--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,10 +38,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 30, 1999</b></dt>
 <dd>
 <a href="mailto:toon@moene.indiv.nluug.nl">Toon Moene</a> and
-<a href="craig@jcb-sc.com">Craig Burley</a> are organizing a Fortran BOF
-session at LinuxExpo in May.  Details will be provided on
+<a href="mailto:craig@jcb-sc.com">Craig Burley</a> are organizing a Fortran BOF
+session at
+<a href="http://www.linuxexpo.org">LinuxExpo</a> in May.
+Details will be provided on
 <a href="http://world.std.com/~burley">Craig's homepage</a> as they become
 available.
 <p>
@@ -159,7 +162,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 29, 1999.</i>
+<i>Last modified on March 31, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
