Add trailing slash to URLs.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,9 +43,9 @@ maintain and improve quality.
 <a href="mailto:toon@moene.indiv.nluug.nl">Toon Moene</a> and
 <a href="mailto:craig@jcb-sc.com">Craig Burley</a> are organizing a Fortran BOF
 session at
-<a href="http://www.linuxexpo.org">LinuxExpo</a> in May.
+<a href="http://www.linuxexpo.org/">LinuxExpo</a> in May.
 Details will be provided on
-<a href="http://world.std.com/~burley">Craig's homepage</a> as they become
+<a href="http://world.std.com/~burley/">Craig's homepage</a> as they become
 available.
 <p>
 </dd>
