--- a/htdocs/egcs-1.2/schedule.html
+++ b/htdocs/egcs-1.2/schedule.html
@@ -19,7 +19,6 @@ for egcs-1.2.
 before the release cycle gets into full swing.  Specifically:
 
 <ul>
-  <li> lcm.c tied into gcse.c.  Done March 21.
   <li> fast-fixincludes.  Enabled by default.  Still have issues to resolve.
   <ul>
     <li> Mising fixes.  We need to add known missing fixes, then verify
@@ -31,9 +30,8 @@ before the release cycle gets into full swing.  Specifically:
     <li> Kill old fixinc.* files.
     <li> Need configure time switch to disable fast-fixinc.
   </ul>
-  <li> Aligned stack slots for the x86.  1st of 2 patches
-       installed.  Need to review 2nd patch again and get it
-       installed.
+  <li> Aligned stack slots for the x86.  1st of 2 patches installed (March 22).
+       Need to do final review 2nd patch again and get it installed.
   <li> Fix EH vs loop unrolling problem.  The patch has been
        approved, but not yet installed.
   <li> Unrolling vs splittable givs problem (exposed by -funroll-loops
@@ -44,18 +42,18 @@ before the release cycle gets into full swing.  Specifically:
        major packages.  Major bughunting work.
   <li> Finish dealing with relative include paths and the ability
        to move toolchains around without rebuilding or -B arguments.
-  <li> Masked bitfield problems reported by Charles (done)
   <li> Issues for new targets (uwin, interix, hpux11, openbsd, etc?)
   <li> SMP build fixes (java & chill)
   <li> Testsuite legal issues need to be resolved.
   <li> Revamped install documentation.
-  <li> Revamped cpp wrapper (installed)
   <li> dwarf2 based EH for ppc svr4 targets
   <li> rtl prologue/epilogue for ppc?
   <li> Cleanup of html docs provided with release
   <li> aliasing issues vs stack space for Fortran
   <li> -femulate-complex issues for Fortran
   <li> sparc -fPIC problem
+  <li> Resolve HJ's FCOMI stuff.
+  <li> Resolve Jeff's zero_extend & shifting stuff
 </ul>
 
 <p> It may be the case that some of these items do not get addressed
