Add Upcoming-Events section, move Fortran BOF item to it

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,21 +34,27 @@ maintain and improve quality.
 <hr>
 
 
-<h2>News/Announcements</h2>
+<h2>Upcoming Events</h2>
 
 <dl>
 
-<dt><b>March 30, 1999</b></dt>
+<dt><b>May, 1999: Fortran BOF</b></dt>
 <dd>
 <a href="mailto:toon@moene.indiv.nluug.nl">Toon Moene</a> and
-<a href="mailto:craig@jcb-sc.com">Craig Burley</a> are organizing a Fortran BOF
-session at
-<a href="http://www.linuxexpo.org/">LinuxExpo</a> in May.
+<a href="mailto:craig@jcb-sc.com">Craig Burley</a>
+are organizing a Fortran Birds-Of-a-Feather (BOF) session for this May's
+<a href="http://www.linuxexpo.org/">LinuxExpo</a>.
 Details will be provided on
 <a href="http://world.std.com/~burley/">Craig's homepage</a> as they become
 available.
 <p>
 </dd>
+
+</dl>
+
+<h2>News/Announcements</h2>
+
+<dl>
 
 <dt><b>March 23, 1999</b></dt>
 <dd> 
@@ -162,7 +168,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 31, 1999.</i>
+<i>Last modified on April 1, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
