Stop referencing obsolete fortran.html; refer to only actual g77 releases

--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -6,8 +6,9 @@
 <h1 align="center">egcs-1.1 new features</h1>
 
 <ul>
-  <li>Integrated GNU Fortran compiler based on <a href="fortran.html">
-  g77-0.5.24-19980804. </a>
+  <li>Integrated GNU Fortran (<code>g77</code>) compiler and runtime library
+  with improvements, based on <a href="../onlinedocs/g77_news.html">
+  <code>g77</code> version 0.5.23</a>.
   <li>Vast improvements in the C++ compiler; so many they have 
   <a href="c++features.html">page of their own!</a>
   <li>Compiler implements <a href="../gcse.html">global common subexpression
@@ -70,7 +71,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  February 18, 1999</i>
+<p><i>Last modified:  April 1, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
