Add close paren

--- a/htdocs/egcs-1.2/schedule.html
+++ b/htdocs/egcs-1.2/schedule.html
@@ -35,7 +35,7 @@ before the release cycle gets into full swing.  Specifically:
   <li> Fix EH vs loop unrolling problem.  The patch has been
        approved, but not yet installed.
   <li> Unrolling vs splittable givs problem (exposed by -funroll-loops
-       bootstrap problems on mips and possibly other platforms.
+       bootstrap problems on mips and possibly other platforms).
   <li> Basic i18n support working.
   <li> Re-enable Joern's loop improvements.
   <li> Fix any bugs exposed by compiling glibc, linux-2.2.x and other
