Update Rainer's entry.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -140,7 +140,8 @@ small fixes.
   <li> Sergey Okhapkin
   <li> Alexandre Oliva for various build infrastructure improvements, scripts
   and amazing testing work.
-  <li> Ranier Orth for random MIPS work.
+  <li> Rainer Orth for random MIPS work, including improvements to our o32
+       ABI support, improvements to dejagnu's MIPS support, etc.
   <li> Melissa O'Neill for various NeXT fixes.
   <li> Alexandre Petit-Bianco for his Java work.
   <li> Matthias Pfaller for major improvements to the NS32k port.
@@ -238,7 +239,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  March 21, 1999</i>
+<p><i>Last modified:  April 2, 1999</i>
 
 
 <hr>
