--- a/htdocs/egcs-1.2/schedule.html
+++ b/htdocs/egcs-1.2/schedule.html
@@ -24,10 +24,10 @@ before the release cycle gets into full swing.  Specifically:
     <li> Mising fixes.  We need to add known missing fixes, then verify
          that the new scheme is working 100% reliably on the major
 	 hosts by comparing with the old fixincludes scheme.
-    <li> Better process for rebuilding the generated files
     <li> Missing dependencies in the generated Makefile
     <li> Windows issues
-    <li> Kill old fixinc.* files.
+    <li> Move fixinc.* selection logic from  mkfixinc.sh back into
+	 gcc/configure.in 
     <li> Need configure time switch to disable fast-fixinc.
   </ul>
   <li> Aligned stack slots for the x86.  1st of 2 patches installed (March 22).
