l Add links to the new CNI manual.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -65,6 +65,17 @@ troublemakers, a group of dedicated hackers.  We're:
 conferences and magazines.
 
 <ul>
+  <li><a name="CNI">
+      <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>"
+       <br>[<a href="papers/cni/t1.html">HTML</a>] 
+           [<a href="papers/cni.sgml">SGML/Docbook source</a>]
+       <br>This is a programmer's manual which explains how to use
+       a Java-aware C++ compiler (G++) to write native methods for Gcj.
+       <br>The CNI design and ideas were proposed in
+       "<cite>Writing native Java methods in natural C++</cite>"
+       (November 1997).
+       <p>
+
   <li><b>August 1998</b>: "<cite>No Silver Bullet - Garbage Collection for 
       Java in Embedded Systems</cite>".
       <br>[<a href="papers/nosb.html">HTML</a>] 
@@ -72,8 +83,10 @@ conferences and magazines.
       <br>Author:  <a href="http://www.cygnus.com/~apbianco/">Alex Petit-Bianco</a>.
       <p>
 
-  <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>" discusses
-      interaction between Java and C++.  
+  <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>"
+      discusses interaction between Java and C++.  This is an early design
+      document;  see "<cite>The Cygnus Native Interface for C++/Java 
+      Integration</cite>" (February 1998) for the programmer's manual.
       <br>[<a href="papers/native++.html">HTML</a>] 
           [<a href="papers/native++.sgml">SGML/Docbook source</a>]
       <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
