--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -30,17 +30,24 @@ is an open list where people are invited to discuss the software we're
 releasing, ask questions, post patches, etc.  Both are majordomo-run lists,
 or you can subscribe with the entry boxes below:
 
-<p>To subscribe to the <code>java-announce</code> mailing list, enter your
+<p>To subscribe to the <tt>java-announce</tt> mailing list, enter your
 e-mail address:
-<form method="get" action="/cgi-bin/subscribe-java-announce">
-  <input type="text" name="name" size="16"> <input type="Submit" name="submit" value="Sign me up!">
-</form>
+<blockquote>
+ <form method="get" action="/cgi-bin/subscribe-sourceware">
+     <input type="hidden" name="listname" value="java-announce">
+     <input type="text" name="username" size="10"> <input type="Submit" name="submit" value="Sign me up!">
+ </form>
+</blockquote>
 
-<br>To subscribe to the <code>java-discuss</code> mailing list, enter your
+<p>To subscribe to the <tt>java-discuss</tt> mailing list, enter your
 e-mail address:
-<form method="get" action="/cgi-bin/subscribe-java-discuss">
-  <input type="text" name="name" size="16"> <input type="Submit" name="submit" value="Sign me up!">
-</form>
+<blockquote>
+ <form method="get" action="/cgi-bin/subscribe-sourceware">
+     <input type="hidden" name="listname" value="java-discuss">
+     <input type="text" name="username" size="10"> <input type="Submit" name="submit" value="Sign me up!">
+ </form>
+</blockquote>
+
 
 <h2>Who we are</h2>
 
