Add subtle links to the web archives of the mailing lists.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -23,12 +23,13 @@ the Java Language.
 <h2>Mailing lists</h2>
 
 <p>We have two mailing lists set up for our Java related
-work, <code>java-announce</code> and <code>java-discuss</code>.
-<code>java-announce</code> is a low-volume, moderated list which will
-have announcements related to this project.  <code>java-discuss</code>
-is an open list where people are invited to discuss the software we're
-releasing, ask questions, post patches, etc.  Both are majordomo-run lists,
-or you can subscribe with the entry boxes below:
+work, <a href="/ml/java-announce/"><tt>java-announce</tt></a>
+and <a href="/ml/java-discuss/"><tt>java-discuss</tt></a>.
+<tt>java-announce</tt> is a low-volume, moderated list which will have
+announcements related to this project.  <tt>java-discuss</tt> is an open
+list where people are invited to discuss the software we're releasing,
+ask questions, post patches, etc.  Both are majordomo-run lists, or you
+can subscribe with the entry boxes below:
 
 <p>To subscribe to the <tt>java-announce</tt> mailing list, enter your
 e-mail address:
@@ -47,7 +48,6 @@ e-mail address:
      <input type="text" name="username" size="10"> <input type="Submit" name="submit" value="Sign me up!">
  </form>
 </blockquote>
-
 
 <h2>Who we are</h2>
 
