Add link to ezmlm/idx documentation.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -25,11 +25,13 @@ the Java Language.
 <p>We have two mailing lists set up for our Java related
 work, <a href="/ml/java-announce/"><tt>java-announce</tt></a>
 and <a href="/ml/java-discuss/"><tt>java-discuss</tt></a>.
-<tt>java-announce</tt> is a low-volume, moderated list which will have
-announcements related to this project.  <tt>java-discuss</tt> is an open
-list where people are invited to discuss the software we're releasing,
-ask questions, post patches, etc.  Both are majordomo-run lists, or you
-can subscribe with the entry boxes below:
+<tt>java-announce</tt> is a low-volume, moderated list which will
+have announcements related to this project.  <tt>java-discuss</tt>
+is an open list where people are invited to discuss the software
+we're releasing, ask questions, post patches, etc.  Both are <a
+href="http://sourceware.cygnus.com/infra/ezman/ezman-1.html">administered
+by the ezmlm/idx mailing list software</a>, or you can subscribe with
+the entry boxes below:
 
 <p>To subscribe to the <tt>java-announce</tt> mailing list, enter your
 e-mail address:
