Undo previous change of recommending SSH compression over CVS compression. By Jason Molenda <jsm@cygnus.com>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -37,19 +37,11 @@ file to test write access.
 <h2>Setting up your local CVS tree</h2>
 
 <p>Once you can login to the machine, it's trivial to start using ssh from
-your remote machine.  Set CVS_RSH in your environment to "ssh".  Add
-the following to your $HOME/.ssh/config file so the communications are
-compressed:
-<blockquote>
-<pre>
-Compression yes
-CompressionLevel 9
-</pre>
-
-<p>Then issue the command
+your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
+the command
 
 <blockquote><code>
-cvs -d :ext:username@egcs.cygnus.com:/cvs/egcs co egcs
+cvs -z 9 -d :ext:username@egcs.cygnus.com:/cvs/egcs co egcs
 </code></blockquote>
 
 where <code>username</code> is your user name at egcs.cygnus.com.
@@ -86,7 +78,7 @@ ForwardX11 no
 <p>Late breaking news: the web pages and CGI scripts are now also
 editable remotely.  Check out wwwdocs instead of egcs (e.g. type
 <blockquote><code>
-cvs -d :ext:username@egcs.cygnus.com:/cvs/egcs co wwwdocs
+cvs -z 9 -d :ext:egcs.cygnus.com:/cvs/egcs co wwwdocs
 </code></blockquote>
 on your workstation) and make whatever changes you deem necessary.
 Web pages go under htdocs/, cgi scripts under cgi-bin/.  When you check
@@ -94,7 +86,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on March 25, 1999.</i>
+<i>Last modified on April  3, 1999.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
