Fix various typos.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -18,7 +18,7 @@ particular order.
   <li> Alasdair Baird for various bugfixes.
   <li> Per Bothner for various improvements to our infrastructure for
   supporting new languages.  Chill and Java.
-  <li> Don Bowman for mips-vxwork contributions.
+  <li> Don Bowman for mips-vxworks contributions.
   <li> Dave Brolley for work on cpplib and Chill.
   <li> Christian Bruel for improvements to local store elimination.
   <li> Herman A.J. ten Brugge for various fixes.
@@ -31,7 +31,7 @@ particular order.
   <li> Scott Christley for his ObjC contributions.
   <li> Branko Cibej for more warning contributions.
   <li> Nick Clifton for arm, v850, m32r work, --help, and other random hacking.
-  <li> Ralf Corsepious for SH testing and minor bugfixing.
+  <li> Ralf Corsepius for SH testing and minor bugfixing.
   <li> Stan Cox for care and feeding of the x86 port and lots of behind
   the scenes hacking.
   <li> Ian Dall for major improvements to the NS32k port.
@@ -71,7 +71,7 @@ particular order.
   <li> Manfred Hollstein for his ongoing work to keep the m88k alive, lots
   of testing an bugfixing, particularly of our configury code.
   <li> Steve Holmgren for MachTen patches.
-  <li> Jan Hubicka for his x86 port improvments.
+  <li> Jan Hubicka for his x86 port improvements.
   <li> Christian Iseli for various bugfixes.
   <li> Kamil Iskra for general m68k hacking.
   <li> Lee Iverson for random fixes and mips testing.
@@ -107,7 +107,7 @@ particular order.
   <li> Andrew MacLeod for his ongoing work in building a real EH system,
   various code generation improvements, etc.
   <li> Bob Manson for his behind the scenes work on dejagnu.
-  <li> Vladimir Markarov for hacking some ugly i960 problems, PowerPC
+  <li> Vladimir Makarov for hacking some ugly i960 problems, PowerPC
   hacking and overall knowledge and direction in the area of instruction
   scheduling.
   <li> Greg McGary for random fixes and (someday) bounded pointers.
@@ -148,14 +148,14 @@ small fixes.
   <li> Gerald Pfeifer for maintenance of the web pages and pointing out lots
   of problems we need to solve.
   <li> Ovidiu Predescu for his work on the ObjC front end.
-  <li> Henning Ptersen
+  <li> Henning Petersen
   <li> Ken Raeburn for various improvements to checker, mips ports and various
   cleanups in the compiler.
   <li> Joern Rennecke for maintaining the sh port, loop, regmove & reload
        hacking.
   <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
   <li> Ken Rose for fixes to our delay slot filling code.
-  <li> Andreas Schawb for his work on the m68k port.
+  <li> Andreas Schwab for his work on the m68k port.
   <li> Graham S. for various infrastructure improvements.
   <li> Jay Sachs
   <li> Juha Sarlin for improvements to the H8 code generator.
@@ -167,7 +167,7 @@ small fixes.
   contributions and RTEMS testing.
   <li> Nathan Sidwell
   <li> Andrey Slepuhin for assorted AIX hacking.
-  <li> Scott Snyder for variou fixes.
+  <li> Scott Snyder for various fixes.
   <li> Richard Stallman, for writing the original gcc and launching the GNU project.
   <li> Nigel Stephens for various mips16 related fixes/improvements.
   <li> Mike Stump for his g++ contributions over the years and more recently
@@ -239,7 +239,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  April 2, 1999</i>
+<p><i>Last modified:  April 3, 1999</i>
 
 
 <hr>
