Fix a little nit; drop an index.html reference.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -80,7 +80,7 @@ the stack.
 <dt><b>March 7, 1999</b></dt>
 <dd> 
 The egcs project now has 
-<a href="onlinedocs/index.html">additional online documentation</a>.
+<a href="onlinedocs/">additional online documentation</a>.
 </dd>
 
 <dt><b>February 26, 1999</b></dt>
@@ -168,7 +168,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 1, 1999.</i>
+<i>Last modified on April 4, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
