--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -11,13 +11,11 @@
 the Java Language.
 
 <blockquote>
-   <p><b>New</b>:  The first part of the development environment which we
-   are making available is <b>gcj</b>, we are releasing it on September
-   6, 1998.  We have a tarball available now and it is being integrated
-   into the <a href="http://egcs.cygnus.com/">EGCS compiler suite</a>
-   as an additional front end (it will show up in all future EGCS snapshots).
-   Check out the <a href="gcj.html"><b>gcj web page</b></a> 
-   for more information.
+      <p><b>New</b>: We've released the ``libgcj'' runtime!  Now you
+	can check out both the compiler and runtime and have a fully
+	working system.  Read <a href="libgcj.html">the libgcj
+	page</a> for details on downloading and installing the
+	runtime.
 </blockquote>
 
 <h2>Mailing lists</h2>
@@ -67,6 +65,21 @@ troublemakers, a group of dedicated hackers.  We're:
  <li> <a href="http://www.cygnus.com/~tromey/">Tom Tromey</a> (tromey@cygnus.com)
 
 </ul>
+
+<h2>Documentation</h2>
+
+    We've written some miscellaneous documentation, plus a FAQ.
+
+    <ul>
+      <li>General <a href="gcj.html">gcj</a> information.
+      <li>General <a href="libgcj.html">runtime</a> information.
+      <li>How to <a href="compile.html">compile a Java program</a>
+      <li><a href="FAQ.html">Frequently Asked Questions</a>
+      <li>How to <a href="contribute.html">contribute</a>
+      <li><a href="papers/cni/t1.html">CNI Documentation</a>
+      <li>How to <a href="port-threads.html">port</a> the thread layer.
+      <li>How to <a href="port-files.html">port</a> the file handling layer.
+    </ul>
 
 <h2>Papers describing our work</h2>
 
@@ -129,22 +142,6 @@ conferences and magazines.
       <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
       <p>
 
-</ul>
-
-<h2>Other free Java-related projects</h2>
-
-<ul>
-  <li>The <a href="http://www.rr.iij4u.or.jp/~kkojima/glass.html">Glass</a>
-      project is a different front end to gcc.
-
-  <li>The <a href="http://www.classpath.org">Classpath</a> project is
-      writing a free replacement for the standard Java libraries.
-
-  <li><a href="http://www.hungry.com/products/japhar/">Japhar</a> is a
-      free Java VM.
-
-  <li><a href="http://www.transvirtual.com">Kaffe</a> is another free 
-      Java VM.
 </ul>
 
 
