Removed cvs.html link

--- a/htdocs/java/contribute.html
+++ b/htdocs/java/contribute.html
@@ -54,8 +54,8 @@
        for format and content.<br>
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
-  <li> The patch itself.  If you are accessing the <a href="cvs.html">
-       CVS repository</a> at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
+  <li> The patch itself.  If you are accessing the
+       CVS repository at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
        else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
        If your version of diff does not support these options, then get the
        latest version of GNU diff.
