Mention -z 3, and mention snapshot directory

--- a/htdocs/java/libgcj.html
+++ b/htdocs/java/libgcj.html
@@ -35,8 +35,11 @@
     <pre>
       cvs -d :pserver:anoncvs@sourceware.cygnus.com:/cvs/java login
         (password is ``anoncvs'')
-      cvs -d :pserver:anoncvs@sourceware.cygnus.com:/cvs/java co libgcj
+      cvs -z 3 -d :pserver:anoncvs@sourceware.cygnus.com:/cvs/java co libgcj
     </pre>
+
+    <p>For those without cvs access, you can find libgcj snapshots
+    in <a href="ftp://sourceware.cygnus.com/pub/java/snapshot/">ftp://sourceware.cygnus.com/pub/java/snapshot/</a>.
 
 
     <h2>How to build it</h2>
