Fix cvsweb URL to point to the correct directory.

--- a/htdocs/java/libgcj.html
+++ b/htdocs/java/libgcj.html
@@ -42,7 +42,7 @@
     in <a href="ftp://sourceware.cygnus.com/pub/java/snapshots/">ftp://sourceware.cygnus.com/pub/java/snapshots/</a>.
 
     <p>You can also <a
-	href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/java/?cvsroot=java">
+	href="/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">
 	view the cvs archive</a> via cvsweb.
 
     <h2>How to build it</h2>
