Add Java announcement.  Move old news into news.html

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,14 @@ available.
 
 <dl>
 
+<dt><b>April 7, 1999</b></dt>
+<dd> 
+<a href="http://www.cygnus.com/">Cygnus</a> announces the first public
+release of libgcj, the runtime component of the GNU compiler for Java.
+<br><a href="javaannounce.html">Read the release announcement</a>.
+<br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
+</dd>
+
 <dt><b>March 23, 1999</b></dt>
 <dd> 
 Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
@@ -81,22 +89,6 @@ the stack.
 <dd> 
 The egcs project now has 
 <a href="onlinedocs/">additional online documentation</a>.
-</dd>
-
-<dt><b>February 26, 1999</b></dt>
-<dd> 
-<a href="mailto:rth@cygnus.com">Richard Henderson</a> of
-<a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
-rewrite of the 
-<a href="http://egcs.cygnus.com/cfg.html">control flow analysis pass</a>
-of the compiler.
-</dd>
-
-<dt><b>February 25, 1999</b></dt>
-<dd> 
-<a href="mailto:espie@openbsd.org">Marc Espie</a> has donated support for
-OpenBSD on the Alpha, SPARC, x86, and m68k platforms.  Additional targets
-are expected in the future.
 </dd>
 
 </dl>
@@ -168,7 +160,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 4, 1999.</i>
+<i>Last modified on April 7, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
