--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,22 @@ home page</a>.
 
 <dl>
 
+<dt><b>February 26, 1999</b></dt>
+<dd>
+<a href="mailto:rth@cygnus.com">Richard Henderson</a> of
+<a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
+rewrite of the
+<a href="http://egcs.cygnus.com/cfg.html">control flow analysis pass</a>
+of the compiler.
+</dd>
+
+<dt><b>February 25, 1999</b></dt>
+<dd>
+<a href="mailto:espie@openbsd.org">Marc Espie</a> has donated support for
+OpenBSD on the Alpha, SPARC, x86, and m68k platforms.  Additional targets
+are expected in the future.
+</dd>
+
 <dt><b>January 21, 1999</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
@@ -200,7 +216,7 @@ framework</b></a>.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 29, 1999.</i>
+<i>Last modified on April 7, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
