--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,6 +64,14 @@ release of libgcj, the runtime component of the GNU compiler for Java.
 <br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
 </dd>
 
+<dt><b>April 6, 1999</b></dt>
+<dd>
+A new snapshot of the C++ standard library re-write has been
+released. This release includes SGI STL 3.12, a working valarray, and
+several (but not all) parts of templatized iostreams--for more information see:
+<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
+</dd>
+
 <dt><b>March 23, 1999</b></dt>
 <dd> 
 Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
