Add Gabriel Dos Reis for libstdc++-v3 stuff.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -151,6 +151,8 @@ small fixes.
   <li> Henning Petersen
   <li> Ken Raeburn for various improvements to checker, mips ports and various
   cleanups in the compiler.
+  <li> Gabriel Dos Reis for contributions and maintenance of libstdc++-v3,
+       including valarray implementation and limits support.
   <li> Joern Rennecke for maintaining the sh port, loop, regmove & reload
        hacking.
   <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
@@ -239,7 +241,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  April 3, 1999</i>
+<p><i>Last modified:  April 8, 1999</i>
 
 
 <hr>
