--- a/htdocs/egcs-1.2/schedule.html
+++ b/htdocs/egcs-1.2/schedule.html
@@ -56,7 +56,7 @@ before the release cycle gets into full swing.  Specifically:
 for egcs-1.2, though we would like to get them all resolved.
 
 
-<p>The tenative schedule for the egcs-1.2 release is:
+<p>The tentative schedule for the egcs-1.2 release is:
 
 <ul>
   <li> <b>April 21, 1999. Feature freeze date</b>.
