--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -107,6 +107,9 @@ Successful
 <p><b>rs6000-ibm-aix4.2.1.0</b> <br>
 Successful
 
+<p><b>sparc-unknown-linux-gnu (sun4m)</b> <br>
+Successful
+
 <p><b>sparc-sun-solaris2.3</b> <br>
 Successful
 
@@ -128,7 +131,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on March 31, 1999.</i>
+<i>Last modified on April 9, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
