--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -38,6 +38,9 @@ Successful
 <p><b>i386-pc-solaris2.6</b><br>
 Successful
 
+<p><b>i386-pc-solaris2.7</b><br>
+Successful
+
 <p><b>i386-unknown-freebsd3.1</b><br>
 Successful
 
@@ -131,7 +134,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on April 9, 1999.</i>
+<i>Last modified on April 11, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
