Announce and document the new egcs-cvs-wwwdocs list.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,13 @@ available.
 
 <dl>
 
+<dt><b>April 13, 1999</b></dt>
+<dd>
+We have set up a new <a href="lists.html">mailing list</a>
+<a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a>
+that tracks checkins to the egcs webpages CVS repository.
+</dd>
+
 <dt><b>April 7, 1999</b></dt>
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> announces the first public
@@ -168,7 +175,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 7, 1999.</i>
+<i>Last modified on April 13, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
