--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -57,13 +57,24 @@ may have changed since you last visited this page.
   egcs-testresults</a></b> is a moderate volume list where test results for
   the egcs compilers are posted.
 </ul>
+
+<p>To post a message, just send mail to
+<i>listname</i><tt>@egcs.cygnus.com</tt>.
+
+
+<a name="msgsize"><h2>Policies</h2></a>
  
-<a name="msgsize"></a>
-<p>All the lists have a maximum message size.  If your message exceeds more than
-40kbytes, you should compress any attachments before sending it to the list.
+<p>All the lists have a maximum message size.  If your message exceeds
+more than 40kbytes, you should compress any attachments before sending
+it to the list.
 
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
+
+<p>Please refrain from sending messages in HTML, RTF or similiar formats.</p>
+
+
+<h2>Archives</h2>
 
 <p>Web archives for all mailing lists are on-line
 (<a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
@@ -76,28 +87,24 @@ and try to avoid cross posting a message to several lists.
 plus you can also <a href="ftp://egcs.cygnus.com/pub/egcs/mail-archives/">
 download mbox formatted archives of each mailing list</a>.
 
-The archives are
-<a href="http://bitrange.com/egcs/search.html">searchable</a>.
-
-<p>The search engine for the web archives is currently hosted at
+<p>A <a href="http://bitrange.com/egcs/search.html">search engine</a>
+for the web archives is currently hosted at
 <a href="http://bitrange.com/">BitRange.com</a>. If you have comments about
 the search function, send a copy to
 <a href="mailto:hp@bitrange.com">hp@bitrange.com</a>.
 
-<p>To post a message, just send mail to <i>listname</i><tt>@egcs.cygnus.com</tt>.
-Please refrain from sending messages in HTML, RTF or similiar formats.
 
+<h2>Subscription</h2>
 
-<p>To subscribe to a list, send mail to
+<p>To subscribe to a list, send a blank mail to
 <i>listname</i><tt>-subscribe@egcs.cygnus.com</tt>
 
-<p>To unsubscribe, send a mail note to 
+<p>To unsubscribe, send a blank mail to 
 <i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt>
 
 <p>Each list also has a digest, which you can subscribe to by sending mail
 to
 <i>listname</i><tt>-digest-subscribe@egcs.cygnus.com</tt>
-
 
 
 <hr>
